<resources>
    <string name="app_name">Doctor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="title_activity_login">login</string>-->

    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="Password">Password</string>
    <string name="ForgotPassword">Forgot Password?</string>

    <string name="PatientName">Patient Name....</string>
    <string name="PatientAge">Age</string>
    <string name="PatientPhone">Patient Phone</string>
    <string name="PatientGender">Patient Gender</string>
    <string name="PatientCivilID">Patient Civil ID</string>

    <!--for dr-->
    <string name="Name">Name</string>
    <string name="EnteryourCivilID">Enter your Civil ID</string>

    <string name="DoctorReply">Doctor Reply:</string>
    <string name="Reply">Reply...</string>
    <string name="SendReply">Send Reply</string>
    <string name="Comments">Comments</string>

    <!--here for report-->
    <string name="BloodPressure">Blood Pressure</string>
    <string name="Coughing">Coughing</string>
    <string name="Dizziness">Dizziness</string>
    <string name="Fever">Fever</string>
    <string name="Headache">Headache</string>
    <string name="HeartRate">Heart Rate</string>
    <string name="Nauseous">Nauseous</string>
    <string name="PainLocation">Pain Location</string>
    <string name="SugarLevel">Sugar Level</string>

    <string name="BloodType">Blood Type</string>
    <string name="Diabetes">Diabetes</string>
    <string name="Asthma">Asthma</string>
    <string name="Allergies">Allergies</string>
    <string name="Medication">Medication</string>
    <!--done for report-->


    <string name="ChangeLanguage">Change Language</string>
    <string name="LangButton">Please change the language of the device</string>

    //frieday
    <string name="Becausewecare">Because we care</string>
    <string name="Aboutus">About us</string>
    <string name="civilId">civil Id</string>

    <string name="Specialty">Specialty</string>
    <string name="Location">Location</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="FirstName">First Name</string>
    <string name="MiddleName">Middle Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Nationality">Nationality</string>
    <string name="Save">Save</string>
    <string name="Birthdate">Birthdate</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Gender">Gender</string>
    <string name="Donthaveanaccount">Do not have an account?</string>
    <string name="YourReplysentsuccessfully">Your reply sent successfully</string>
    <string name="Chooselanguage">Choose language</string>

    //activities

    <string name="Myprofile">My profile</string>
    //could not put notfound in activity
    <string name="notfound">notfound</string>
    <string name="Editprofile">Edit profile</string>
    <string name="Allfieldsarerequired">All fields are required</string>
    <string name="ProfileUpdated">Profile Updated</string>
    <string name="Errortryagainlater">Error try again later</string>
    <string name="AllReports">All Reports</string>
    <string name="ForgetPasswordAct">Forget Password</string>

    <string name="ViewReports">View Reports</string>
    <string name="PatientRequests">Patient Requests</string>
    <string name="MyPatients">My Patients</string>
    <string name="Share">Share</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="AboutusAct">About us</string>
    <string name="Recommend">Let me recommend you this application</string>

    <!--could not put chooseone in activity-->
    <string name="chooseone">Choose one</string>
    <string name="PatientProfile">Patient Profile</string>

    <string name="Request">Request</string>
    <string name="ReplySent">Reply Sent</string>
    <string name="ReplytoReport">Reply to Report</string>
    <string name="ReportDetail">Report Detail</string>
    <string name="OurAim">Our aim is to improve public health, by facilitating doctor-patient communications. The application allows doctors to ubiquity access patient\'s information, view reports and reply to comments instantly and accurately. As well as accept or decline patients requests.</string>


    <!---->
    <string name="Pending">Pending</string>
    <string name="Replied">Replied</string>
    <string name="Age">Age</string>

     <!--16 april-->

    <string name="NOPain">NO Pain</string>
    <string name="Editreply">Edit reply</string>

    <string name="YourReplysentFailed">Your Reply sent Failed</string>
    <string name="Connecting">Connecting...</string>
    <string name="Pleasefillallfields">Please fill all fields</string>
    <string name="Passwordmustbeatleast8character">Password must be at least 8 character</string>

    <string name="RegisterFailed">Register Failed</string>
    <string name="Useanotheremailaddress">Use another email address</string>
    <string name="Connectionerror">Connection error</string>
    <string name="Loading">Loading...</string>
    <string name="Call">Call </string>
    <string name="Areyousureyouwannacall">Are you sure you want to call </string>
    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="Reasoncantbeempty">Reason can\'t be empty</string>
    <string name="Quantitymustbebetween1and20">Quantity must be between 1 and 20</string>
    <string name="RequestFailed">Request Failed</string>
    <string name="MyBloodRequests">My Blood Requests</string>
    <string name="Errorresponse">Error response: </string>
    <string name="Logining">Login...</string>
    <string name="BloodRequests">Blood Requests</string>
    <string name="Pleaseenteravalidemailaddress">Please enter a valid email address</string>
    <string name="Emailsentsuccessfully">Email sent successfully</string>
    <string name="Connectionfailed">Connection failed</string>
    <string name="SendingEmail">Sending Email...</string>
    <string name="Wrongpassword">Wrong password</string>
    <string name="NewPasswordmustbemorethan8characters">New Password must be more than 8 characters</string>
    <string name="UpdatingProfile">Updating Profile...</string>
    <string name="ErrorTheimagesizeistoolarge">Error, The image size is too large. Use another Image</string>
    <string name="ErrorCannotcontinueTryagainlater">Error Cannot continue, Try again later.</string>
    <string name="Registersuccessfully">Register successfully</string>
    <string name="No">No</string>
    <string name="NewBloodRequests">New Blood Requests</string>
    <string name="Requestsent">Request sent</string>
    <string name="Uploadsuccessfully">Upload successfully</string>
    <string name="UploadFailed">Upload Failed</string>
    <string name="Uploading">Uploading...</string>
    <string name="Reason">Reason</string>
    <string name="Selectbloodtype">Select blood type:</string>
    <string name="Quantity">Quantity:</string>
    <string name="Edit">Edit</string>
    <string name="NewPassword">New Password</string>
    <string name="status">status</string>

    <string name="Available">Available</string>
    <string name="NotAvailable">Not Available</string>


    <string name="Patientacceptedsuccessfully">Patient accepted successfully</string>

    <string name="Patientacceptedfailed">Patient accepted failed</string>


    <string name="Patientdeclinedsuccessfully">Patient declined successfully</string>
    <string name="Patientdeclinedfailed">Patient declined failed</string>


    //



    //


    <!--//   "Use another email address"-->
    <!--//  "Loading..."-->

    <!--//   "Call "         "Are you sure you wanna call "     "Yes"       "Cancel"-->
    <!--// "Reason can't be empty"      "Quantity must be between 1 and 20"     "Request Failed"-->
    <!--//  "My Blood Requests"       "Error response: "-->
    <!--//  "Login..."-->
    <!--//  "Blood Requests"-->
    <!--//  "Please enter a valid email address"    "Email sent successfully"     "Connection failed"       "Sending Email..."-->
    <!--//     "Wrong password"     "New Password must be more than 8 characters"       "Updating Profile..."-->
    <!--//      "Error, The image size is too large. Use another Image"         "Error Cannot continue, Try again later."-->

</resources>
