<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.pifss.doctor.Activitys.loginActivity"
    android:id="@+id/activity_login_id"
    >



    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/myToolbar"
            style="@style/AppTheme.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueActionBarColor"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        app:srcCompat="@mipmap/mhealth"
        android:layout_below="@+id/appBarLayout"
        android:layout_centerHorizontal="true">

        <requestFocus />

    </ImageView>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailIT"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/imageViewLogo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >

        <EditText
            android:id="@+id/txtDrEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="27dp"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/email_2"
            android:drawablePadding="10dp"
            android:ems="10"

            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:text="r9hacks@gmail.com"
            android:textColor="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/passIT"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/emailIT"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >

        <EditText
            android:id="@+id/txtDrPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:drawableLeft="@mipmap/password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:text="12345678"
            android:textColor="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.50"
        android:background="@color/colorAccent"
        android:text="@string/Login"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="421dp"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="11dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.75"
        android:background="@color/colorAccent"
        android:text="@string/Register"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="421dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/passIT"
        android:layout_alignRight="@+id/passIT"
        android:layout_below="@+id/passIT"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="12dp"
        android:text="@string/ForgotPassword"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:text="@string/Donthaveanaccount"
        android:textSize="16sp" />

</RelativeLayout>

