<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.pifss.doctor.Activitys.ReplyReportActivity"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mytoolbar"
        style="@style/AppTheme.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueActionBarColor">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view"
        android:layout_margin="20dp"
        android:layout_marginTop="40dp"
        android:layout_weight="0.05"
        android:text="@string/DoctorReply"
        android:textColor="@color/material_drawer_dark_background"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextReply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="17dp"
        android:layout_weight="0.85"
        android:ems="10"
        android:hint="@string/Reply"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonSendReply"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.75"
        android:background="@color/colorAccent"
        android:text="@string/SendReply"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="421dp" />

    <ImageView
        android:id="@+id/imageViewComments"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mytoolbar"
        app:srcCompat="@mipmap/message_icon_blue"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewcommentsContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="Eat less sugar ahmad"
        android:textSize="18sp"
        android:layout_below="@+id/textViewcomments"
        android:layout_alignLeft="@+id/textViewcomments"
        android:layout_alignStart="@+id/textViewcomments"
        android:layout_marginTop="11dp"
        android:layout_alignBottom="@+id/imageViewComments"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textViewcomments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageViewComments"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/imageViewComments"
        android:layout_toRightOf="@+id/imageViewComments"
        android:text="@string/Comments"
        android:textColor="@color/material_drawer_dark_background" />

    <view
        android:id="@+id/view"
        class="android.support.v7.widget.Toolbar"
        layout_width="match_parent"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/imageViewComments"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

</RelativeLayout>
