<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pifss.doctor.Activitys.DoctorProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/myToolbar"
            style="@style/AppTheme.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueActionBarColor"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/ImageBoarderColor"
        android:id="@+id/imageViewLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/doctor_profile"
        android:layout_below="@+id/appBarLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

    <EditText
        android:id="@+id/txtDrSpeciality"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_below="@+id/txtDrCivil"
        android:layout_marginEnd="14dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@mipmap/stethoscope"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Specialty"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.75"
        android:background="@color/colorAccent"
        android:text="@string/EditProfile"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="421dp" />


        <EditText
            android:id="@+id/txtDrEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="example@gmail.com"
            android:inputType="textPersonName"
            android:textColor="@android:color/darker_gray"
            android:layout_below="@+id/txtDrNameView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="34dp" />


    <EditText
        android:id="@+id/txtDrCivil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDrEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="14dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="19dp"
        android:drawableLeft="@mipmap/id_card"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/civilId"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/darker_gray" />


    <EditText
        android:id="@+id/txtDrLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtDrSpeciality"
        android:layout_marginEnd="14dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@mipmap/map"
        android:drawablePadding="10dp"
        android:ems="10"
        android:gravity=""
        android:hint="@string/Location"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/darker_gray" />


    <TextView
        android:id="@+id/txtDrNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="Doctor Name"
        android:textSize="24sp" />

</RelativeLayout>
